--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "blink-diff": "^1.0.12",
     "crypto": "0.0.3",
     "del": "^1.1.1",
+    "eol": "^0.4.0",
     "gulp": "^3.8.11",
     "run-sequence": "^1.1.3"
   }
