--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-edit-xml": "^2.0.0",
     "gulp-header": "^1.2.2",
     "gulp-if": "^1.2.5",
+    "gulp-load-plugins": "^0.8.1",
     "run-sequence": "^1.1.3"
   }
 }
