--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-load-plugins": "^0.8.1",
     "gulp-minify-css": "^1.1.1",
     "gulp-minify-html": "^1.0.1",
+    "gulp-rename": "^1.2.0",
     "run-sequence": "^1.1.3"
   }
 }
