--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-minify-css": "^1.1.1",
     "gulp-minify-html": "^1.0.1",
     "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.3",
     "run-sequence": "^1.1.3"
   }
 }
