--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-size": "^1.2.1",
     "gulp-useref": "^1.1.1",
     "gulp-zip": "^2.0.3",
+    "node-json-minify": "^0.1.3-a",
     "run-sequence": "^1.1.3"
   }
 }
