--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-useref": "^1.1.1",
     "gulp-zip": "^2.0.3",
     "node-json-minify": "^0.1.3-a",
+    "ps-node": "^0.1.4",
     "run-sequence": "^1.1.3"
   }
 }
