--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-json-minify": "^0.1.3-a",
     "ps-node": "^0.1.4",
     "run-sequence": "^1.1.3",
-    "uglify-js": "^2.4.21"
+    "uglify-js": "^2.4.21",
+    "yargs": "^3.5.4"
   }
 }
